--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set NODE_ENV=dev && nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
