--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "set NODE_ENV=dev && nodemon index.js"
   },
   "keywords": [],
   "author": "",
