--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "set NODE_ENV=dev && nodemon index.js"
+    "dev": "set NODE_ENV=development && nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.32.0",
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -21,9 +22,11 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
+    "shortid": "^2.2.16",
     "socket.io": "^4.6.1"
   }
 }
