--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.32.0",
     "@sendgrid/mail": "^7.7.0",
+    "aws-sdk": "^2.1435.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -23,9 +23,11 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "multer-s3-transform": "^2.10.3",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
+    "sharp": "^0.32.4",
     "shortid": "^2.2.16",
     "socket.io": "^4.6.1"
   }
