--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "sharp": "^0.32.4",
     "shortid": "^2.2.16",
     "socket.io": "^4.6.1"
+  },
+  "engines": {
+    "node": "23.4.0"
   }
 }
-
