--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.5.1",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "multer-s3-transform": "^2.10.3",
