--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1435.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "multer-s3": "^3.0.1",
     "multer-s3-transform": "^2.10.3",
     "pg": "^8.9.0",
+    "request": "^2.88.2",
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "sharp": "^0.32.4",
