--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@giphy/react-components": "^10.0.1",
     "aws-sdk": "^2.1435.0",
     "axios": "^1.8.4",
     "body-parser": "^1.20.1",
@@ -22,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "multer-s3-transform": "^2.10.3",
+    "nodemon": "^3.1.9",
     "pg": "^8.9.0",
     "request": "^2.88.2",
     "sequelize": "^6.28.0",
