--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.5.1",
-    "jwks-rsa": "^3.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "multer-s3-transform": "^2.10.3",
