--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
@@ -30,7 +30,9 @@
     "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0",
     "sharp": "^0.32.4",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "engines": {
     "node": "16.20.2"
