--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1435.0",
+    "@aws-sdk/client-rekognition": "^3.876.0",
+    "@aws-sdk/client-s3": "^3.878.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
